fixed issue with registration/login forms not showing up

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,8 +17,11 @@
     margin: 0;
     padding: 0;
     font-family: Lexend, sans-serif;
-    background-color: white;
+    /* background-color: blue; 
+    border: 2px solid yellow;
+    min-height: 100vh; */
 }
+
 
 P {
   font-family: Lexend, Arial, Helvetica, sans-serif;
